<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banner_color"
    tools:context="com.fahed.developer.hackspaceperu_reto1.MainActivity">

    <EditText
        android:id="@+id/editTextWork"
        android:layout_width="53dp"
        android:layout_height="43dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/time_default_work"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/editTextSleep"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBanner"
        tools:layout_constraintTop_creator="1"/>

    <EditText
        android:id="@+id/editTextSleep"
        android:layout_width="57dp"
        android:layout_height="44dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/time_default_sleep"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextWork"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <EditText
        android:id="@+id/editTextPomodoro"
        android:layout_width="59dp"
        android:layout_height="43dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/time_default_pomodoro"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextSleep"
        app:layout_constraintLeft_toRightOf="@+id/editTextSleep"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/subtitle_amount_of_work"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextWork"
        app:layout_constraintVertical_bias="0.568"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_work"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:fontFamily="sans-serif-bold"
        app:layout_constraintRight_toLeftOf="@+id/textView4"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="23dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        tools:layout_constraintBaseline_creator="1"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/subtitle_amount_of_sleep"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextSleep"
        app:layout_constraintVertical_bias="0.535"
        android:fontFamily="sans-serif-light"
        android:layout_marginStart="17dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sleep"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:fontFamily="sans-serif-bold"
        app:layout_constraintRight_toLeftOf="@+id/textView6"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/subtitle_pomodoro"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editTextPomodoro"
        app:layout_constraintVertical_bias="0.588"
        android:fontFamily="sans-serif-light"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_pomodoro"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:fontFamily="sans-serif-bold"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="57dp"
        app:layout_constraintRight_toRightOf="@+id/buttonStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        tools:layout_constraintBaseline_creator="1"/>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:onClick="startPomodoro"
        android:text="@string/start_pomodoro"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintLeft_creator="1"/>

    <ImageView
        android:id="@+id/imageViewBanner"
        android:layout_width="0dp"
        android:layout_height="171dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/tomato"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/slogan_proyecto"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBanner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif-bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"/>

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="171dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBanner"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewBanner"/>

</android.support.constraint.ConstraintLayout>
